Bug 980041 - Rollup and backport of various APZC patches to b2g28. a=fabrice

* m-c cset 319abcb8c59e: part 1 of Bug 963278 - Better fix to deal with concurrent scroll updates from APZ and other places. r=tn,botond,jimm
* m-c cset 6fda903b4571: part 1 of Bug 969455 - Forgot to update GfxMessageUtils.h when updating FrameMetrics.h in bug 963278. r=drs
* m-c cset 2b06fb886dcb: Bug 970070 - Update the last-dispatched-paint metrics when we get a scroll update from layout. r=botond